<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeCounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player1">player 1</string>
    <string name="player2">player 2</string>
    <string name="player3">player 3</string>
    <string name="player4">player 4</string>
    <string name="player5">player 5</string>
    <string name="player6">player 6</string>
    <string name="player7">player 7</string>
    <string name="player8">player 8</string>
    <string name="p">+</string>
    <string name="p5">+5</string>
    <string name="m">-</string>
    <string name="m5">-5</string>
    <string name="life">&#160;Life: 20</string>

</resources>
