<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add player"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/one">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:id="@+id/textView2"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView4"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button2"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button3"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button4"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button5"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/two">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:id="@+id/textView3"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView5"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button6"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button7"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button8"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button9"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/three">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player3"
                android:id="@+id/textView6"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView7"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button10"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button11"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button12"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button13"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/four">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player4"
                android:id="@+id/textView8"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView9"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button14"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button15"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button16"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button17"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/five">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player5"
                android:id="@+id/textView10"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView11"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button18"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button19"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button20"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button21"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/six">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player6"
                android:id="@+id/textView12"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView13"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button22"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button23"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button24"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button25"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/seven">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player7"
                android:id="@+id/textView14"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView15"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button26"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button27"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button28"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button29"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/eight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player8"
                android:id="@+id/textView16"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                android:id="@+id/textView17"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p"
                android:id="@+id/button30"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:id="@+id/button31"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:id="@+id/button32"
                android:layout_weight="1" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/m5"
                android:id="@+id/button33"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
